[package]
name = "ping_tunnel"
version = "0.1.0"
edition = "2024"

[lib]
name = "ping_tunnel"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "edge"
path = "src/edge.rs"

[[bin]]
name = "supernode"
path = "src/supernode.rs"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
futures = "0.3.31"
http-body-util = "0.1"
httparse = "1.9"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "client", "client-legacy", "http1", "http2", "tokio"] }
quinn = "0.11.9"
rcgen = "0.14.5"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
dashmap = "6"
napi = { version = "3.3", features = ["tokio_rt", "napi8"] }
napi-derive = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
