[package]
name = "ping_tunnel"
version = "0.1.0"
edition = "2024"

[lib]
name = "ping_tunnel"
crate-type = ["cdylib", "rlib"]

[features]
default = []
napi = []

[[bin]]
name = "edge"
path = "src/edge.rs"

[[bin]]
name = "supernode"
path = "src/supernode.rs"

[dependencies]
hostname = "0.4"
anyhow = "1.0.100"
bytes = "1.11.0"
httparse = "1.9"
quinn = "0.11.9"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
tokio = { version = "1.48.0", features = ["full"] }
dashmap = "6"
napi = { version = "3.6", features = ["tokio_rt", "napi8"] }
napi-derive = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
